* fix z-index issue for Torus wallet

--- a/assets/styles/bnc-onboard--custom.css
+++ b/assets/styles/bnc-onboard--custom.css
@@ -1,6 +1,7 @@
 .bn-onboard-custom.bn-onboard-modal {
   /* font-family: 'Helvetica Neue', 'DM Mono', 'Courier', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important; */
-  z-index: 100000;
+  /* z-index: 100000; */
+  z-index: 9001;
   /* z-index:99 */
 }
 
